--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build The Docker Image
       run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
-
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -38,6 +38,7 @@ jobs:
   build-and-publish:
     needs: build-and-test
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -51,18 +52,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Debug step to check the tag value
-    - name: Debug Docker Tag
-      run: echo "Tag value: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest"
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         file: ./DockerFile
         push: true
-        # Use a hardcoded tag to avoid dynamic issues
-        tags: flasktest-app:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
 
     - name: Image digest
       run: echo ${{ steps.build-and-publish.outputs.digest }}
